@startuml
class game.logic.Furnace {
- PlayerBank bank
+ <<Create>> Furnace(double,Direction,PlayerBank)
+ PlayerBank getBank()
+ void processItem(Item)
~ void smeltHeldItem()
}


class game.logic.Item {
- double value
+ <<Create>> Item(double)
+ double getValue()
+ void setValue(double)
+ void multiplyValue(double)
}


class game.logic.OutgoingTransfer {
- int fromX
- int fromY
- int toX
- int toY
- Item item
+ <<Create>> OutgoingTransfer(int,int,int,int,Item)
+ int fromY()
+ Item item()
+ int toY()
+ int toX()
+ int fromX()
}


class game.ui.StartMenuController {
- ImageView backgroundImageView
+ void initialize(URL,ResourceBundle)
~ void startGame(ActionEvent)
}


class game.logic.Conveyor {
+ <<Create>> Conveyor(double,Direction)
+ void processItem(Item)
~ Optional<OutgoingTransfer> prepareOutgoingTransfer(GridSystem,boolean[][])
}

class game.logic.Dropper {
- double spawnValue
+ <<Create>> Dropper(double,Direction,double)
+ double getSpawnValue()
+ void processItem(Item)
~ void spawnIfStillEmpty(boolean)
}


class game.logic.PlayerBankTest {
~ void depositIncreasesBalance()
~ void trySpendSuccessDecreasesBalance()
~ void trySpendFailureLeavesBalanceUnchanged()
~ void depositRejectsNegativeAmount()
~ void trySpendRejectsNegativeAmount()
}

enum game.logic.Direction {
+  UP
+  DOWN
+  LEFT
+  RIGHT
- int deltaX
- int deltaY
~ <<Create>> Direction(int,int)
+ int deltaX()
+ int deltaY()
}


class game.ui.Main {
- {static} int SCENE_WIDTH
- {static} int SCENE_HEIGHT
+ void start(Stage)
+ {static} void main(String[])
}


abstract class game.logic.Machine {
- int gridX
- int gridY
- double cost
- Direction facing
# Item currentItem
# <<Create>> Machine(double,Direction)
+ void onTick()
+ int getGridX()
+ int getGridY()
+ void setGridPosition(int,int)
+ double getCost()
+ void setCost(double)
+ Direction getFacing()
+ void setFacing(Direction)
+ Item getCurrentItem()
~ void setCurrentItem(Item)
+ {abstract}void processItem(Item)
+ boolean wouldAccept(Item)
+ boolean acceptItem(Item)
~ void clearCurrentItem()
~ Optional<OutgoingTransfer> prepareOutgoingTransfer(GridSystem,boolean[][])
}


class game.logic.GridSystem {
- int width
- int height
- Machine[][] cells
+ <<Create>> GridSystem(int,int)
+ int getWidth()
+ int getHeight()
+ boolean isInside(int,int)
+ Machine getMachine(int,int)
+ Machine getNeighbor(Machine,Direction)
+ boolean placeMachine(int,int,Machine)
+ boolean removeMachine(int,int)
+ void tick()
}


class game.logic.GridSystemTest {
~ void placeMachineRejectsOutOfBounds()
~ void placeMachineRejectsOverlap()
~ void conveyorLineMovesAtMostOneCellPerTick()
~ void furnaceCreditsBankAndClearsItem()
}

class game.ui.GameController {
- {static} double TILE_SIZE
- {static} double ZOOM_MIN
- {static} double ZOOM_MAX
- {static} double LOGIC_INTERVAL_SEC
- {static} double PAN_SPEED_PX_PER_SEC
- {static} double COST_DROPPER
- {static} double COST_CONVEYOR
- {static} double COST_UPGRADER
- {static} double COST_FURNACE
- Canvas gameCanvas
- VBox shopPopup
- Label moneyLabel
- Label shopHintLabel
- HBox inventoryBox
- GridSystem logicGrid
- PlayerBank bank
- Map<String,Image> imageCache
- double cameraX
- double cameraY
- double zoomLevel
- Set<KeyCode> activeKeys
- Direction placementFacing
- ShopSelection shopSelection
- Map<ShopSelection,Integer> inventory
- double mouseWorldX
- double mouseWorldY
- AnimationTimer gameLoop
- long lastFrameNanos
- long lastLogicTickNanos
+ void initialize(URL,ResourceBundle)
- void preloadImages()
- Image getImage(String,String)
- Image createPlaceholderImage(String)
- void setupControls(Scene)
- void detachSceneHandlers(Scene)
- void handleKeyPressed(KeyEvent)
- void handleKeyReleased(KeyEvent)
- void handleScroll(ScrollEvent)
- void startGameLoop()
- void renderGraphics()
- Image imageForMachine(Machine)
- double facingAngle(Direction)
- void drawImageRotated(GraphicsContext,Image,double,double,double,double,double)
- void handleCanvasClick(MouseEvent)
- double costForSelection(ShopSelection)
- Machine createMachine(ShopSelection)
~ void toggleShop()
~ void buyDropper()
~ void buyConveyor()
~ void buyUpgrader()
~ void buyFurnace()
- void updateMoneyLabel()
- void updateShopHint()
- void cyclePlacementFacing()
- void handleCanvasMouseMove(MouseEvent)
- void buyToInventory(ShopSelection,double)
- void updateInventoryUI()
- Image imageForSelection(ShopSelection)
- void renderHologram(GraphicsContext)
}


enum game.ui.ShopSelection {
+  NONE
+  DROPPER
+  CONVEYOR
+  UPGRADER
+  FURNACE
}

class game.logic.Upgrader {
- double upgradeFactor
+ <<Create>> Upgrader(double,Direction,double)
+ double getUpgradeFactor()
+ void processItem(Item)
}


class game.logic.PlayerBank {
- double balance
+ <<Create>> PlayerBank()
+ <<Create>> PlayerBank(double)
+ double getBalance()
+ void deposit(double)
+ boolean trySpend(double)
}


interface game.logic.Tickable {
~ void onTick()
}



game.logic.Machine <|-- game.logic.Furnace
javafx.fxml.Initializable <|.. game.ui.StartMenuController
game.logic.Machine <|-- game.logic.Conveyor
game.logic.Conveyor <|-- game.logic.Dropper
javafx.application.Application <|-- game.ui.Main
game.logic.Tickable <|.. game.logic.Machine
javafx.fxml.Initializable <|.. game.ui.GameController
game.logic.Conveyor <|-- game.logic.Upgrader
@enduml